Fix text align in modal

--- a/css/style.css
+++ b/css/style.css
@@ -390,6 +390,8 @@ header nav .nav-logo {
   background-size: contain;
   background-position: center;
   transition: all 0.2s ease;
+  filter: drop-shadow(0px 3px 3px rgba(0, 0, 0, 0.25));
+
   @media (max-width: 767px) {
     width: 5rem;
     height: 4rem;
@@ -665,6 +667,7 @@ dialog .dialog-container {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  text-align: center;
   margin: 3rem 2rem;
   @media (max-width: 767px) {
     margin: 2rem 1rem;
